--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                                         <a href="tel:+375293948388" class="btn btn-primary btn-lg">
                                             <i class="fas fa-phone"></i> 
                                         </a>
-                                        <a href="viber://add?number=80293948388" class="btn btn-primary btn-lg">
+                                        <a href="viber://add?number=+375293948388" class="btn btn-primary btn-lg">
                                             <i class="fab fa-viber"></i> 
                                         </a>
                                     </div>
@@ -669,7 +669,7 @@
                 
                 <div class="col-lg-4">
                     <h5 class="mb-3">Контакты</h5>
-                    <a href="tel:+375291234567" class="text-white text-decoration-none h5 d-block mb-2">+375 (29) 394-83-88</a>
+                    <a href="tel:+375293948388" class="text-white text-decoration-none h5 d-block mb-2">+375 (29) 394-83-88</a>
                     <p class="mb-0">Пн-Вс: 8:00 - 22:00</p>
                     
                     <div class="mt-3">
