--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
             <!-- Цены -->
             <div id="prices-content" class="tab-content">
                 <div class="text-center mb-5">
-                    <h2>Цены на электромонтажные работы</h2>
-                    <p class="lead text-muted">Электромонтажные работы оцениваются отдельно для каждого заказа.</p> 
-                    <p>После утверждения техзадания, составляется смета с перечислением работ и оборудования.</p>
-                    <p>При расчете цены учитываются количество и сложность работ, условия их выполнения.</p>
+                    <h2>Ориентировочный прайс-лист</h2>
+                    <p class="lead text-muted">Электромонтажные работы оцениваются отдельно для каждого заказа. 
+                    После утверждения техзадания, составляется смета с перечислением работ и оборудования.
+                    При расчете цены учитываются количество и сложность работ, условия их выполнения.</p>
                 </div>
 
                 <div id="prices-container">
@@ -624,7 +624,7 @@
                                         <a href="tel:+375293948388" class="btn btn-primary btn-lg">
                                             <i class="fas fa-phone"></i> 
                                         </a>
-                                        <a href="viber://add?number=+375293948388" class="btn btn-primary btn-lg">
+                                        <a href="viber://add?number=375293948388" class="btn btn-primary btn-lg">
                                             <i class="fab fa-viber"></i> 
                                         </a>
                                     </div>
