предпоследний коммит перед структурой

--- a/index.html
+++ b/index.html
@@ -486,12 +486,12 @@
     <div class="row g-4">
         <div class="col-md-6 col-lg-4">
             <div class="card h-100">
-                <img src="изображение_viber_2025-09-18_06-33-26-194.jpg" class="card-img-top work-image" alt="Электрощитовое оборудование">
+                <img src="изображение_viber_2025-09-18_06-36-26-784.jpg" class="card-img-top work-image" alt="Электрощитовое оборудование">
             </div>
         </div>
         <div class="col-md-6 col-lg-4">
             <div class="card h-100">
-                <img src="изображение_viber_2025-09-18_06-33-26-879.jpg" class="card-img-top work-image" alt="Автоматические выключатели">
+                <img src="изображение_viber_2025-09-21_11-48-00-118.jpg" class="card-img-top work-image" alt="Автоматические выключатели">
             </div>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -501,17 +501,17 @@
         </div>
         <div class="col-md-6 col-lg-4">
             <div class="card h-100">
-                <img src="изображение_viber_2025-09-18_06-36-26-784.jpg" class="card-img-top work-image" alt="Электрооборудование">
+                <img src="photo_2025-10-04_15-03-20.jpg" class="card-img-top work-image" alt="Электрооборудование">
             </div>
         </div>
         <div class="col-md-6 col-lg-4">
             <div class="card h-100">
-                <img src="изображение_viber_2025-09-18_06-38-29-766.jpg" class="card-img-top work-image" alt="Слаботочные системы">
+                <img src="изображение_viber_2025-09-18_06-33-26-879.jpg" class="card-img-top work-image" alt="Слаботочные системы">
             </div>
         </div>
         <div class="col-md-6 col-lg-4">
             <div class="card h-100">
-                <img src="изображение_viber_2025-09-21_11-48-00-118.jpg" class="card-img-top work-image" alt="Монтаж освещения">
+                <img src="изображение_viber_2025-09-18_06-33-26-194.jpg" class="card-img-top work-image" alt="Монтаж освещения">
             </div>
         </div>
     </div>
